feat(#184): rewrite capy to capybara
Squash the rebased PR history so GitHub can use rebase-and-merge within its commit-count limit.